Edited .gitignore file
The file now contains edited contents, which we believe would have
effect on ignoring files and directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-.idea
+.idea/
+*.iml
+
+*/out/**
+*/logs/**
+logs/**
+*/target/**
+
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+dependency-reduced-pom.xml
