--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.oasis</groupId>
     <artifactId>oasis</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <modules>
-        <module>exceptions</module>
         <module>model</module>
         <module>repository</module>
         <module>service</module>
-        <module>webcontroller</module>
-        <module>webmodel</module>
+        <module>web-controller</module>
+        <module>web-model</module>
+        <module>web-controller</module>
     </modules>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
 
     <name>OASIS</name>
 
@@ -35,6 +35,75 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <!--External Dependency-->
+                <!--Spring Web MVC Dependency-->
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-webmvc</artifactId>
+                    <version>5.1.0.RELEASE</version>
+                </dependency>
+
+                <!--Spring Security Dependency-->
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-crypto</artifactId>
+                    <version>3.1.0.RELEASE</version>
+                </dependency>
+
+                <!--Spring MongoDB Data Dependency-->
+                <dependency>
+                    <groupId>org.springframework.data</groupId>
+                    <artifactId>spring-data-mongodb</artifactId>
+                    <version>2.1.0.RELEASE</version>
+                </dependency>
+
+                <!--Lombok Dependency-->
+                <dependency>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                    <version>1.18.2</version>
+                </dependency>
+
+            <!--Module Dependency-->
+                <!--Model Module Dependency-->
+                <dependency>
+                    <groupId>com.oasis</groupId>
+                    <artifactId>model</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+
+                <!--Repository Module Dependency-->
+                <dependency>
+                    <groupId>com.oasis</groupId>
+                    <artifactId>repository</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+
+                <!--Service Module Dependency-->
+                <dependency>
+                    <groupId>com.oasis</groupId>
+                    <artifactId>service</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+
+                <!--Web Model Module Dependency-->
+                <dependency>
+                    <groupId>com.oasis</groupId>
+                    <artifactId>web-model</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+
+                <!--Web Controller Module Dependency-->
+                <dependency>
+                    <groupId>com.oasis</groupId>
+                    <artifactId>webcontroller</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <finalName>oasis</finalName>
