--- a/service/pom.xml
+++ b/service/pom.xml
@@ -2,11 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.oasis</groupId>
+        <artifactId>oasis</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.oasis</groupId>
     <artifactId>service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <dependencies>
@@ -14,28 +18,30 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.1.0.RELEASE</version>
         </dependency>
 
         <!--Spring Security Dependency-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
-            <version>3.1.0.RELEASE</version>
         </dependency>
 
         <!--Repository Dependency-->
         <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>repository</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--Model Dependency-->
+        <dependency>
+            <groupId>com.oasis</groupId>
+            <artifactId>model</artifactId>
         </dependency>
 
         <!--Web Model Dependency-->
         <dependency>
             <groupId>com.oasis</groupId>
-            <artifactId>webmodel</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>web-model</artifactId>
         </dependency>
     </dependencies>
 </project>
