--- a/web-controller/pom.xml
+++ b/web-controller/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
+        <!--Jackson Dependency-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!--Service Dependency-->
         <dependency>
             <groupId>com.oasis</groupId>
@@ -27,10 +33,6 @@
         </dependency>
 
         <!--Web Model Dependency-->
-        <dependency>
-            <groupId>com.oasis</groupId>
-            <artifactId>web-model</artifactId>
-        </dependency>
         <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>web-model</artifactId>
