Fixed packaging and module version issue
Module version from each module has been deleted so that the module
follows the parent's version. Packaging for each module (excluding
web-controller as it is war file) are described as jar.

--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -10,16 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>repository</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <!--Spring MongoDB Data Dependency-->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
         </dependency>
-
-        <!--Model Dependency-->
         <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>model</artifactId>
