--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,16 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>model</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <!--Spring MongoDB Data Dependency-->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
         </dependency>
-
-        <!--Lombok Dependency-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
