--- a/web-controller/pom.xml
+++ b/web-controller/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.oasis</groupId>
         <artifactId>oasis</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,6 +20,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.2</version>
         </dependency>
         <dependency>
             <groupId>com.oasis</groupId>
