Added subfeature for upload/download image
Subfeature for uploading/downloading image is added, but requires
further review. Especially when specified file does not exist, instead
of throwing custom exception, the program returned 406. Source of this
bug is still unknown at this point.

--- a/web-controller/pom.xml
+++ b/web-controller/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>orika-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>service</artifactId>
         </dependency>
