--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <jackson.version>2.9.4</jackson.version>
         <lombok.version>1.18.2</lombok.version>
         <orika.version>1.5.2</orika.version>
+        <javaxservletapi.version>3.1.0</javaxservletapi.version>
+        <commonsfileupload.version>1.3.3</commonsfileupload.version>
     </properties>
 
     <repositories>
@@ -80,6 +82,16 @@
                 <groupId>ma.glasnost.orika</groupId>
                 <artifactId>orika-core</artifactId>
                 <version>${orika.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javaxservletapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commonsfileupload.version}</version>
             </dependency>
 
             <!--Module Dependency-->
