--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <orika.version>1.5.2</orika.version>
         <javaxservletapi.version>3.1.0</javaxservletapi.version>
         <commonsfileupload.version>1.3.3</commonsfileupload.version>
+        <itextpdf.version>5.5.13</itextpdf.version>
     </properties>
 
     <repositories>
@@ -92,6 +93,11 @@
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
                 <version>${commonsfileupload.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>itextpdf</artifactId>
+                <version>${itextpdf.version}</version>
             </dependency>
 
             <!--Module Dependency-->
