--- a/service/pom.xml
+++ b/service/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>commons-fileupload</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>repository</artifactId>
         </dependency>
