Reformatted employees feature
Several files for employees feature are reformatted. Orika Mapping is
also implemented in several methods despite its slow performance.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>itextpdf</artifactId>
         </dependency>
         <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>repository</artifactId>
         </dependency>
