--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <javaxservletapi.version>3.1.0</javaxservletapi.version>
         <commonsfileupload.version>1.3.3</commonsfileupload.version>
         <itextpdf.version>5.5.13</itextpdf.version>
+        <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <repositories>
@@ -98,6 +99,11 @@
                 <groupId>com.itextpdf</groupId>
                 <artifactId>itextpdf</artifactId>
                 <version>${itextpdf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
 
             <!--Module Dependency-->
