--- a/service/pom.xml
+++ b/service/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>orika-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.oasis</groupId>
             <artifactId>repository</artifactId>
         </dependency>
