Fixed dependency problem on mongodb
Dependency problem on mongodb with mong-java-driver is fixed in this
commit.

--- a/web-controller/pom.xml
+++ b/web-controller/pom.xml
@@ -112,5 +112,10 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
