--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <spring-security-config.version>5.1.2.RELEASE</spring-security-config.version>
 
         <fongo.version>2.1.0</fongo.version>
+        <mongo-java-driver.version>3.8.2</mongo-java-driver.version>
         <nosqlunit-mongodb.version>0.7.6</nosqlunit-mongodb.version>
         <spring-test.version>5.0.8.RELEASE</spring-test.version>
         <junit.version>4.12</junit.version>
@@ -176,6 +177,13 @@
                 <artifactId>fongo</artifactId>
                 <version>${fongo.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>${mongo-java-driver.version}</version>
+                <scope>test</scope>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>com.lordofthejars</groupId>
